--- a/src/CasasoftStandards/language/de.po
+++ b/src/CasasoftStandards/language/de.po
@@ -1,21 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: CASASTANDARDS\n"
-"POT-Creation-Date: 2017-09-05 19:41+0200\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: de_CH\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
-"X-Generator: Poedit 2.0.2\n"
-"X-Poedit-KeywordsList: translate\n"
-"X-Poedit-Basepath: .\n"
-"X-Generator: Poedit 1.8.12\n"
-"X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-SearchPath-0: ..\n"
+"X-Generator: POEditor.com\n"
+"Project-Id-Version: CASASTANDARDS\n"
+"Language: de-ch\n"
 
 #: ../src/CasasoftStandards/Service/CategoryService.php:37
 #: ../src/CasasoftStandards/Service/CategoryService.php:294
@@ -353,25 +343,7 @@ msgstr "Gewerbe"
 
 #: ../src/CasasoftStandards/Service/CategoryService.php:126
 msgid "Commercial plot"
-msgstr ""
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:130
-msgid "week"
-msgstr "Woche"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:133
-msgid "month"
-msgstr "Monat"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:136
-msgid "year"
-msgstr "Jahr"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:155
-#: ../src/CasasoftStandards/Service/ConversionService.php:454
-#: ../src/CasasoftStandards/Service/ConversionService.php:559
-msgid "On Request"
-msgstr "Auf Anfrage"
+msgstr "Gewerbegrundstück"
 
 #: ../src/CasasoftStandards/Service/ConversionService.php:441
 msgid "Reference no."
@@ -410,61 +382,23 @@ msgstr "Flächen"
 msgid "Features"
 msgstr "Eigenschaften"
 
-#: ../src/CasasoftStandards/Service/ConversionService.php:453
-msgid "Price"
-msgstr "Preis"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:455
-msgid "Price per sqm"
-msgstr "Preis / m²"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:456
-msgid "priceBruttoPerSqmPerMonth"
-msgstr "Bruttomiete |/ m² / Monat"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:457
-msgid "priceBruttoPerSqmPerYear"
-msgstr "Bruttomiete / m² / Jahr"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:458
-msgid "Gross rent / month"
-msgstr "Bruttomiete / Monat"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:459
-msgid "priceBruttoTotalPerYear"
-msgstr "Bruttomiete / Jahr"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:460
-#, fuzzy
-#| msgid "Net rent / m² / month"
-msgid "Net rent / m<sup>2</sup> / month"
-msgstr "Nettomiete / m² / Monat"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:461
-#, fuzzy
-#| msgid "Net rent / m² / year"
-msgid "Net rent / m<sup>2</sup> / year"
-msgstr "Nettomiete / m² / Jahr"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:462
-msgid "Net rent / month"
-msgstr "Nettomiete / Monat"
-
-#: ../src/CasasoftStandards/Service/ConversionService.php:463
-msgid "Net rent / year"
-msgstr "Nettomiete / Jahr"
+#: ../src/CasasoftStandards/Service/ConversionService.php:155
+#: ../src/CasasoftStandards/Service/ConversionService.php:454
+#: ../src/CasasoftStandards/Service/ConversionService.php:559
+msgid "On Request"
+msgstr "Auf Anfrage"
 
 #: ../src/CasasoftStandards/Service/ConversionService.php:608
 msgid "Fully ***"
-msgstr ""
+msgstr "Voll ***"
 
 #: ../src/CasasoftStandards/Service/ConversionService.php:610
 msgid "Partialy ***"
-msgstr ""
+msgstr "Teilweise ***"
 
 #: ../src/CasasoftStandards/Service/ConversionService.php:612
 msgid "NOT ***"
-msgstr ""
+msgstr "NICHT ***"
 
 #: ../src/CasasoftStandards/Service/FeatureService.php:37
 msgid "Chimney fireplace"
@@ -1117,17 +1051,83 @@ msgstr "Bauen"
 msgid "Investment"
 msgstr "Investitionsobjekt"
 
-#~ msgid "Gross rent / m² / month"
-#~ msgstr "Bruttomiete / m² / Monat"
+#: 
+msgid "Gross rent / m² / month"
+msgstr "Bruttomiete / m² / Monat"
 
-#~ msgid "Gross rent / m² / year"
-#~ msgstr "Bruttomiete / m² / Jahr"
+#: 
+msgid "Gross rent / m² / year"
+msgstr "Bruttomiete / m² / Jahr"
 
-#~ msgid "Gross rent / year"
-#~ msgstr "Bruttomiete / Jahr"
+#: ../src/CasasoftStandards/Service/ConversionService.php:458
+msgid "Gross rent / month"
+msgstr "Bruttomiete / Monat"
 
-#~ msgid "Gross price"
-#~ msgstr "Bruttopreis"
+#: 
+msgid "Gross rent / year"
+msgstr "Bruttomiete / Jahr"
 
-#~ msgid "Net price"
-#~ msgstr "Nettopreis"
+#: 
+msgid "Gross price"
+msgstr "Bruttopreis"
+
+#: 
+msgid "Net rent / m² / month"
+msgstr "Nettomiete / m² / Monat"
+
+#: 
+msgid "Net rent / m² / year"
+msgstr "Nettomiete / m² / Jahr"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:463
+msgid "Net rent / year"
+msgstr "Nettomiete / Jahr"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:462
+msgid "Net rent / month"
+msgstr "Nettomiete / Monat"
+
+#: 
+msgid "Net price"
+msgstr "Nettopreis"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:130
+msgid "week"
+msgstr "Woche"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:133
+msgid "month"
+msgstr "Monat"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:136
+msgid "year"
+msgstr "Jahr"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:453
+msgid "Price"
+msgstr "Preis"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:455
+msgid "Price per sqm"
+msgstr "Preis pro m²"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:456
+msgid "priceBruttoPerSqmPerMonth"
+msgstr "Bruttomiete / m² / Monat"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:457
+msgid "priceBruttoPerSqmPerYear"
+msgstr "Bruttomiete / m² / Jahr"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:459
+msgid "priceBruttoTotalPerYear"
+msgstr "Bruttomiete pro Jahr"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:460
+msgid "Net rent / m<sup>2</sup> / month"
+msgstr "Nettomiete  / m<sup>2</sup> / Monat"
+
+#: ../src/CasasoftStandards/Service/ConversionService.php:461
+msgid "Net rent / m<sup>2</sup> / year"
+msgstr "Nettomiete / m<sup>2</sup> / Jahr"
+
