Update de.po (POEditor.com)

--- a/src/CasasoftStandards/language/de.po
+++ b/src/CasasoftStandards/language/de.po
@@ -1014,7 +1014,7 @@ msgstr "Grundstückspreis"
 
 #: ../src/CasasoftStandards/Service/NumvalService.php:691
 msgid "Gross premium"
-msgstr "Bruttoprämie"
+msgstr "Bruttorendite"
 
 #: ../src/CasasoftStandards/Service/NumvalService.php:698
 msgid "Rental deposit"
