--- a/src/CasasoftStandards/language/de.po
+++ b/src/CasasoftStandards/language/de.po
@@ -351,7 +351,7 @@ msgstr "Referenz-Nr."
 
 #: ../src/CasasoftStandards/Service/ConversionService.php:445
 msgid "Categories"
-msgstr "Kategorien"
+msgstr "Kategorie"
 
 #: ../src/CasasoftStandards/Service/ConversionService.php:446
 msgid "Available from"
