Align Key term changes

--- a/src/CasasoftStandards/language/en.po
+++ b/src/CasasoftStandards/language/en.po
@@ -1476,3 +1476,109 @@ msgstr ""
 msgid "Number of showers"
 msgstr ""
 
+
+#:
+msgid "Minergie-A"
+msgstr "Minergie-A"
+
+#:
+msgid "Minergie-A-ECO"
+msgstr "Minergie-A-ECO"
+
+#:
+msgid "Minergie-Areal"
+msgstr "Minergie-Areal"
+
+#:
+msgid "MQS Bau"
+msgstr "MQS Bau"
+
+#:
+msgid "MQS Betrieb"
+msgstr "MQS Betrieb"
+
+#:
+msgid "Fiber optic connection"
+msgstr "Fiber optic connection"
+
+#:
+msgid "Multimedia wiring"
+msgstr "Multimedia wiring"
+
+#:
+msgid "Charging station for electric car"
+msgstr "Charging station for electric car"
+
+#:
+msgid "Temporary use"
+msgstr "Temporary use"
+
+#:
+msgid "Agricultural land"
+msgstr "Agricultural land"
+
+#:
+msgid "Arcade"
+msgstr "Arcade"
+
+#:
+msgid "Bakery"
+msgstr "Bakery"
+
+#:
+msgid "Butcher"
+msgstr "Butcher"
+
+#:
+msgid "Car repair shop"
+msgstr "Car repair shop"
+
+#:
+msgid "Carpentry shop"
+msgstr "Carpentry shop"
+
+#:
+msgid "Casino"
+msgstr "Casino"
+
+#:
+msgid "Cheese factory"
+msgstr "Cheese factory"
+
+#:
+msgid "Club disco"
+msgstr "Club disco"
+
+#:
+msgid "Commercial lot"
+msgstr "Commercial lot"
+
+#:
+msgid "Commercial space"
+msgstr "Commercial space"
+
+#:
+msgid "Doctors office"
+msgstr "Doctors office"
+
+#:
+msgid "Earth sheltered dwelling"
+msgstr "Earth sheltered dwelling"
+
+#:
+msgid "Hairdresser"
+msgstr "Hairdresser"
+
+#:
+msgid "Industrial lot"
+msgstr "Industrial lot"
+
+#:
+msgid "Industrial object"
+msgstr "Industrial object"
+
+#:
+msgid "Kiosk"
+msgstr "Kiosk"
+
+
