update minergie translations

--- a/src/CasasoftStandards/language/de.po
+++ b/src/CasasoftStandards/language/de.po
@@ -1493,7 +1493,7 @@ msgid "Charging station for electric car"
 msgstr "Ladestation für Elektroauto"
 
 #:
-msgid "Minergie-A"
+msgid "Minergie A"
 msgstr "Minergie-A"
 
 #:
